Pre-release version. Need to fix some bugs and add cool things. Need to add navigation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ http://kampov.com/
           <li>
             <div class="step-details">
               <h3>Download The Package</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque harum explicabo. Facere consequatur vero corrupti libero reiciendis officia. Ullam architecto esse inventore repellat ab facere velit unde corporis id.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque harum explicabo. Facere consequatur vero corrupti libero reiciendis officia.</p>
             </div>
           </li>
           <li>
@@ -44,6 +44,12 @@ http://kampov.com/
             </div>
           </li>
 
+          <li>
+            <div class="step-details">
+              <h3>Activate Theme and Plugins</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse nesciunt veniam perferendis odit vel velit, necessitatibus accusamus, impedit deleniti animi similique, totam voluptate molestias nisi iusto omnis quasi ipsa!</p>
+            </div>
+          </li>
         </ul>
     </div>
     </section>
@@ -54,7 +60,7 @@ http://kampov.com/
   <script src="src/jquery.StepByStep.js"></script>
   <script>
     $('.StepByStep').StepByStep({
-      visible: 1
+      active: 2
     });
   </script>
 </body>
