--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ http://kampov.com/
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>StepByStep.js</title>
+  <title>StepByStep.js | Vlad Kampov</title>
   <link rel="stylesheet" href="css/style.css">
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,48 +19,68 @@ http://kampov.com/
 <body>
   <div id="container">
     <header>
-      <h1>StepByStep.js</h1>
+      <h1 style="margin-top:50px">StepByStep.js</h1>
     </header>
     <div id="main">
-    <section>
-      <div class="StepByStep">
-        <ul>
-          <li>
-            <div class="step-details">
-              <h3>Download The Package</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque harum explicabo. Facere consequatur vero corrupti libero reiciendis officia.</p>
-            </div>
-          </li>
-          <li>
-            <div class="step-details">
-              <h3>Upload The Theme</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis facere quod minima vitae, deleniti inventore quae nihil dolor doloribus porro velit aliquam, autem dolore! Nihil, adipisci ducimus assumenda unde corporis.</p>
-            </div>
-          </li>
-          <li>
-            <div class="step-details">
-              <h3>Activate Theme and Plugins</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse nesciunt veniam perferendis odit vel velit, necessitatibus accusamus, impedit deleniti animi similique, totam voluptate molestias nisi iusto omnis quasi ipsa!</p>
-            </div>
-          </li>
+      <section>
+        <div class="StepByStep">
+          <ul>
+            <li>
+              <div class="step-details">
+                <h3>First</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium atque harum explicabo. Facere consequatur vero corrupti libero reiciendis officia.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-details">
+                <h3>Second</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis facere quod minima vitae, deleniti inventore quae nihil dolor doloribus porro velit aliquam, autem dolore! Nihil, adipisci ducimus assumenda unde corporis.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-details">
+                <h3>Third</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse nesciunt veniam perferendis odit vel velit, necessitatibus accusamus, impedit deleniti animi similique, totam voluptate molestias nisi iusto omnis quasi ipsa!</p>
+              </div>
+            </li>
 
-          <li>
-            <div class="step-details">
-              <h3>Activate Theme and Plugins</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse nesciunt veniam perferendis odit vel velit, necessitatibus accusamus, impedit deleniti animi similique, totam voluptate molestias nisi iusto omnis quasi ipsa!</p>
-            </div>
-          </li>
+            <li>
+              <div class="step-details">
+                <h3>Fourth</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam esse nesciunt veniam perferendis odit vel velit, necessitatibus accusamus, impedit deleniti animi similique, totam voluptate molestias nisi iusto omnis quasi ipsa!</p>
+              </div>
+            </li>
+          </ul>
+      </div>
+      </section>
+    </div>
+    <footer>
+      <div id="menu" class="clearfix">
+        <ul>
+          <li><a href="https://github.com/vladkampov/StepByStep.js">GitHub</a></li>
+          <li><a href="http://kampov.com/">About Me</a></li>
+          <li><a href="https://twitter.com/VladKampov">Twitter</a></li>
+          <li><a href="https://www.facebook.com/">Facebook</a></li>
         </ul>
-    </div>
-    </section>
-    </div>
+      </div>
+      <div id="StepByStep-after" style="margin-top:500px">
+        <img src="http://static.tumblr.com/8fc13269239ef17ef26b82f257595ce1/sdxrjom/dWhmzn4qm/tumblr_static_tumblr_mvdsqp3lzj1s5dda3o1_500.png" alt="DOGE!">
+      </div>
+    </footer>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="src/jquery.StepByStep.js"></script>
   <script>
     $('.StepByStep').StepByStep({
-      active: 2
+      lineColor: "#e7e7e7",
+      active: 1,
+      inactiveColor: '#e7e7e7',
+      numColor: '#222',
+      numColorActive: '#fff',
+      activeColors: ['#ec0101','#ffbf00', '#00a9fe', '#1bb012', '#888'],
+      colorLast: '#004179',
+      after: 'StepByStep-after'
     });
   </script>
 </body>
