Minor bug fixes. Added compressed version of plugin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ http://kampov.com/
       </section>
     </div>
     <footer>
-      <div id="menu" class="clearfix">
+      <div id="menu" class="clearfix" style="margin-top:25px">
         <ul>
           <li><a href="https://github.com/vladkampov/StepByStep.js">GitHub</a></li>
           <li><a href="http://kampov.com/">About Me</a></li>
